compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__allowed_string_escapes.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn a() { \"\\n\" \"\\r\" \"\\t\" \"\\\\\" \"\\\"\" \"\\\\^\" }"
---
----- SOURCE CODE
pub fn a() { "\n" "\r" "\t" "\\" "\"" "\\^" }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/0]).

-file("project/test/my/mod.gleam", 1).
-spec a() -> binary().
a() ->
    <<"\n"/utf8>>,
<<"\r"/utf8>>,
<<"\t"/utf8>>,
<<"\\"/utf8>>,
<<"\""/utf8>>,
<<"\\^"/utf8>>.
