compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__binop_parens.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n    let a = 2 * {3 + 1} / 2\n    let b = 5 + 3 / 3 * 2 - 6 * 4\n    b\n}\n"
---
----- SOURCE CODE

pub fn main() {
    let a = 2 * {3 + 1} / 2
    let b = 5 + 3 / 3 * 2 - 6 * 4
    b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    A = (2 * (3 + 1)) div 2,
B = (5 + ((3 div 3) * 2)) - (6 * 4),
B.
