compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__block_assignment.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  let x = {\n    1\n    2\n  }\n  x\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let x = {
    1
    2
  }
  x
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    X = begin
    1,
    2
end,
X.
