compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__field_access_function_call1.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n    let t = #(fn(x) { x })\n\n    t.0(5)\n}\n"
---
----- SOURCE CODE

pub fn main() {
    let t = #(fn(x) { x })

    t.0(5)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    T = {fun(X) -> X end},
(erlang:element(1, T))(5).
