compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__guard_variable_rewriting.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn main() {\n  case 1.0 {\n    a if a <. 0.0 -> {\n      let a = a\n      a\n    }\n    _ -> 0.0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main() {
  case 1.0 {
    a if a <. 0.0 -> {
      let a = a
      a
    }
    _ -> 0.0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 1).
-spec main() -> float().
main() ->
    case 1.0 of
    A when A < +0.0 ->
        A@1 = A,
        A@1;

    _ ->
        +0.0
end.
