compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn go() {\nlet x = #(100000000000000000, #(2000000000, 3000000000000, 40000000000), 50000, 6000000000)\n  x\n}"
---
----- SOURCE CODE
pub fn go() {
let x = #(100000000000000000, #(2000000000, 3000000000000, 40000000000), 50000, 6000000000)
  x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> {integer(),
    {integer(), integer(), integer()},
    integer(),
    integer()}.
go() ->
    X = {100000000000000000,
    {2000000000, 3000000000000, 40000000000},
    50000,
    6000000000},
X.
