compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test0_2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn go() {\n    let fifteen = 0xF\n    let nine = 0o11\n    let ten = 0b1010\n  fifteen\n}"
---
----- SOURCE CODE
pub fn go() {
    let fifteen = 0xF
    let nine = 0o11
    let ten = 0b1010
  fifteen
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> integer().
go() ->
    Fifteen = 16#F,
Nine = 8#11,
Ten = 2#1010,
Fifteen.
