compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test0_3.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn go() {\n  let y = 1\n  let y = 2\n  y\n}"
---
----- SOURCE CODE
pub fn go() {
  let y = 1
  let y = 2
  y
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> integer().
go() ->
    Y = 1,
Y@1 = 2,
Y@1.
